--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "erp-imperio",
   "version": "1.0.0",
+  "description": "ERP Império Distribuidora",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   }
 }
