--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
+
 {
   "name": "erp-imperio",
   "version": "1.0.0",
-  "description": "ERP Império Distribuidora",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
