--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
-
 {
   "name": "erp-imperio",
   "version": "1.0.0",
+  "description": "ERP Império Distribuidora",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.11.3"
   }
 }
