--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "erp-imperio",
   "version": "1.0.0",
-  "description": "ERP Império Distribuidora",
+  "description": "ERP Imperio Distribuidora",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "author": "Imperio Distribuidora",
+  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "express-session": "^1.17.3"
   }
 }
